--- a/w5-lab-storage/src/app/home/home.page.html
+++ b/w5-lab-storage/src/app/home/home.page.html
@@ -17,5 +17,10 @@
   </ion-item>
   <ion-button expand="full" (click)="setItem()">Set Item</ion-button>
   <ion-button expand="full" (click)="getItem()">Get Item</ion-button>
+  <ion-button expand="full" (click)="removeItem()">Remove Item</ion-button>
+  <ion-button expand="full" (click)="clearItems()">Clear</ion-button>
+  <ion-button expand="full" (click)="keys()">Keys</ion-button>
+  <ion-button expand="full" (click)="length()">Length</ion-button>
+  <ion-button expand="full" (click)="forEach()">Iterate</ion-button>
   <p>{{ output }}</p>
 </ion-content>
